Fix lanyard logo alignment

--- a/_assets/styles/global.scss
+++ b/_assets/styles/global.scss
@@ -205,7 +205,7 @@
 }
 
 .event-detail .lanyrd-link {
-  top: 1px;
+  top: 7px;
   left: 5px;
   width: 32px;
   height: 32px;
